# prail_signal

./: .gitignore  CMakeLists.txt
blink/: CMakeLists.txt
main/: CMakeLists.txt  main.c  state.h
main/state/: CMakeLists.txt  state.c
src/: CMakeLists.txt  main.c
src/sensor/: CMakeLists.txt  sensor.c  sensor.h
src/state/: CMakeLists.txt  state.c  state.h
src/test/: CMakeLists.txt  non_canon_input.c  struct_member.c  test_status.c
test/: select_timeout.c  signal_handler_example.c
